--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install -y doxygen libeigen3-dev libopenblas-dev liblapack-dev ninja-build
+          sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
           cd doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install eigen ninja
+        run: brew install ninja
       - name: Lint with flake8
         run: |
           pip install flake8
