--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -28,10 +28,10 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
-      - name: Build documentation (Linux)
+      - name: Build C++ documentation (Linux)
         if: runner.os == 'Linux'
         run: |
-          cd doc && doxygen
+          cd cpp/doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install ninja
@@ -48,6 +48,11 @@ jobs:
         run: |
           cd python
           pip install .
+      - name: Build Python documentation (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          pip install sphinx
+          cd python/doc && make html
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy
@@ -66,8 +71,11 @@ jobs:
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
           git rm -r basix/main/cpp
+          git rm -r basix/main/python
           mkdir -p basix/main/cpp
-          cp -r ../doc/html/* basix/main/cpp
+          mkdir -p basix/main/python
+          cp -r ../cpp/doc/html/* basix/main/cpp
+          cp -r ../python/doc/build/html/* basix/main/python
           git add --all
           git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
           git push
