--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -71,7 +71,7 @@ jobs:
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
           git rm -r basix/main/cpp
-          git rm -r basix/main/python
+          git rm -r --ignore-unmatch basix/main/python
           mkdir -p basix/main/cpp
           mkdir -p basix/main/python
           cp -r ../cpp/doc/html/* basix/main/cpp
