--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/indexing.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/lattice.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/log.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/mappings.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/maps.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/moments.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/polyset.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/quadrature.h
@@ -101,7 +101,7 @@ target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/finite-element.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/lattice.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/log.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/mappings.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/maps.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/moments.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/polyset.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/quadrature.cpp
