Implement dof transformations in Basix (#193)
* Add apply_transformations functions

* typos in docs

* ffc branch

* don't use matrix_power

* tweak nedelec 3d

* try column major transposes

* don't multiply 0 by 0 tensors?

* remove column major

* Add precomputation step to allow for multiplication by matrices without needing any temporary memory

* document functions

* doc

* use xtl::span

* double, not int

* use solve instead of inv

* fix a typo and tidy a little

* correct offsets

* -to

* branch name, not the full push code

* dolfin branxh

* document precomputing a permutation

* add documentation of prepare_matrix

* more docs

* correct math in docs

* simplify psuedocode

* simplify docs

* Pass by reference

* Use more STL

* Remove a private data member

* Remove unused code

* Simplifications

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/maps.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/moments.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/polyset.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/precompute.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/quadrature.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/lagrange.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/nce-rtc.h
@@ -105,6 +106,7 @@ target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/maps.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/moments.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/polyset.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/precompute.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/quadrature.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/lagrange.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/nce-rtc.cpp
