--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,18 +14,22 @@ include(FeatureSummary)
 option(BUILD_SHARED_LIBS "Build Basix with shared libraries." ON)
 add_feature_info(BUILD_SHARED_LIBS BUILD_SHARED_LIBS "Build Basix with shared libraries.")
 
+set(XTENSOR_USE_XSIMD 1)
+
 # Find dependecies
 set(XTENSOR_MIN_VERSION 0.23.4)
 set(XTL_MIN_VERSION 0.7.0)
 
 if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.19)
   find_package(xtl ${XTL_MIN_VERSION}...<0.8 QUIET)
-  find_package(xtensor ${XTENSOR_MIN_VERSION}...<0.24 QUIET)
+  find_package(xtensor ${XTENSOR_MIN_VERSION}...<0.24)
 else()
   find_package(xtl ${XTL_MIN_VERSION} QUIET)
   find_package(xtensor ${XTENSOR_MIN_VERSION} QUIET)
 endif()
 find_package(xtensor-blas 0.19 QUIET)
+# find_package(xsimd 7.4.10 QUIET)
+
 if(NOT xtl_FOUND OR NOT xtensor_FOUND OR NOT xtensor-blas_FOUND)
   include(FetchContent)
 endif()
@@ -134,14 +138,28 @@ target_link_libraries(basix PRIVATE ${LAPACK_LIBRARIES})
 # apply the SYSTEM option to the includes, and this causes our strict
 # compiler checks to fail on the xtensor headers.
 # target_link_libraries(basix PRIVATE xtl)
-# target_link_libraries(basix PRIVATE xtensor)
+target_link_libraries(basix PUBLIC xtensor)
 # target_link_libraries(basix PRIVATE xtensor-blas)
 get_target_property(_xtl_include_dirs xtl INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(basix SYSTEM PRIVATE ${_xtl_include_dirs})
+
 get_target_property(_xtensor_blas_include_dirs xtensor-blas INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(basix SYSTEM PRIVATE ${_xtensor_blas_include_dirs})
-get_target_property(_xtensor_include_dirs xtensor INTERFACE_INCLUDE_DIRECTORIES)
-target_include_directories(basix SYSTEM PRIVATE ${_xtensor_include_dirs})
+
+# get_target_property(_xtensor_include_dirs xtensor INCLUDE_DIRECTORIES)
+# message("foo: ${xtensor_INCLUDE_DIRS}")
+
+# get_target_property(_xtensor_include_dirs xtensor INTERFACE_INCLUDE_DIRECTORIES)
+# get_target_property(_xtensor_definitions xtensor INTERFACE_COMPILE_DEFINITIONS)
+# target_include_directories(basix SYSTEM PUBLIC ${_xtensor_include_dirs})
+# target_compile_definitions(basix PUBLIC ${_xtensor_definitions})
+
+# Enable SIMD operations
+# if (xsimd_FOUND)
+#   target_link_libraries(basix PUBLIC xsimd xtensor::optimize)
+#   target_link_libraries(basix PUBLIC xtensor::optimize)
+#   target_compile_definitions(basix PUBLIC XTENSOR_USE_XSIMD)
+# endif()
 
 # Set compiler flags
 list(APPEND BASIX_DEVELOPER_FLAGS -O2;-g;-pipe)
