--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.16)
 project(Basix VERSION "0.0.1" LANGUAGES CXX)
 include(GNUInstallDirs)
 
+set(CMAKE_NO_SYSTEM_FROM_IMPORTED OFF)
+
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
