--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,7 +19,6 @@ jobs:
       CC: gcc-10
       CXX: g++-10
 
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -27,8 +26,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install pybind11
-        run:
-          pip install pybind11
+        run: pip install pybind11
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
