--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,11 @@ set(XTENSOR_MIN_VERSION 0.23.4)
 set(XTL_MIN_VERSION 0.7.0)
 
 if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.19)
-  find_package(xtl ${XTL_MIN_VERSION}...<0.8 REQUIRED)
-  find_package(xtensor ${XTENSOR_MIN_VERSION}...<0.24 REQUIRED)
+  find_package(xtl ${XTL_MIN_VERSION}...<0.8)
+  find_package(xtensor ${XTENSOR_MIN_VERSION}...<0.24)
 else()
-  find_package(xtl ${XTL_MIN_VERSION} REQUIRED)
-  find_package(xtensor ${XTENSOR_MIN_VERSION REQUIRED})
+  find_package(xtl ${XTL_MIN_VERSION})
+  find_package(xtensor ${XTENSOR_MIN_VERSION})
 endif()
 find_package(xtensor-blas 0.19 REQUIRED)
 if(NOT xtl_FOUND OR NOT xtensor_FOUND OR NOT xtensor-blas_FOUND)
