Remove a CMake REQUIRED

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ else()
   find_package(xtl ${XTL_MIN_VERSION})
   find_package(xtensor ${XTENSOR_MIN_VERSION})
 endif()
-find_package(xtensor-blas 0.19 REQUIRED)
+find_package(xtensor-blas 0.19)
 if(NOT xtl_FOUND OR NOT xtensor_FOUND OR NOT xtensor-blas_FOUND)
   include(FetchContent)
 endif()
