--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -17,11 +17,10 @@ find_package(Basix REQUIRED)
 
 # Check if the Basix C++ library was compiled with xtensor SIMD
 get_target_property(BASIX_DEFN Basix::basix INTERFACE_COMPILE_DEFINITIONS)
-if(XTENSOR_USE_XSIMD IN_LIST BASIX_DEFN)
+if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
   find_package(xsimd REQUIRED)
   set(XTENSOR_USE_XSIMD ON)
 endif()
-
 
 # include(FetchContent)
 # FetchContent_Declare(
@@ -39,7 +38,12 @@ find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
 # Create the binding library
 pybind11_add_module(_basixcpp SHARED wrapper.cpp)
 target_link_libraries(_basixcpp PRIVATE pybind11::module)
-target_link_libraries(_basixcpp PUBLIC Basix::basix)
+target_link_libraries(_basixcpp PRIVATE Basix::basix)
+
+# Add xsimd is the Basix C++ interface was compiler with it
+if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
+  target_link_libraries(_basixcpp PRIVATE xsimd)
+endif()
 
 # Add strict compiler flags
 include(CheckCXXCompilerFlag)
