--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -7,12 +7,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Find dependencies
-find_package(xtl REQUIRED)
-find_package(xtensor REQUIRED)
+# xtensor dependencies
 # Note: xtensor-blas_DIR is not an admissible environment variable name,
 # so we use xtensor_blas_DIR
+find_package(xtl REQUIRED)
+find_package(xtensor REQUIRED)
 find_package(xtensor-blas HINTS $ENV{xtensor_blas_DIR} REQUIRED)
+
+# Find Basix (C++)
 find_package(Basix REQUIRED)
 
 # Check if the Basix C++ library was compiled with xtensor SIMD
@@ -40,7 +42,7 @@ pybind11_add_module(_basixcpp SHARED wrapper.cpp)
 target_link_libraries(_basixcpp PRIVATE pybind11::module)
 target_link_libraries(_basixcpp PRIVATE Basix::basix)
 
-# Add xsimd is the Basix C++ interface was compiler with it
+# Add xsimd if the Basix C++ interface was compiled with it
 if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
   target_link_libraries(_basixcpp PRIVATE xsimd)
 endif()
