--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -15,14 +15,14 @@ find_package(Basix REQUIRED)
 # so we use xtensor_blas_DIR
 find_package(xtl REQUIRED)
 find_package(xtensor REQUIRED)
-find_package(xtensor-blas HINTS $ENV{xtensor_blas_DIR} REQUIRED)
+# find_package(xtensor-blas HINTS $ENV{xtensor_blas_DIR} REQUIRED)
 
 
 # Check if the Basix C++ library was compiled with xtensor SIMD
-get_target_property(BASIX_DEFN Basix::basix INTERFACE_COMPILE_DEFINITIONS)
-if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
-  find_package(xsimd REQUIRED)
-endif()
+# get_target_property(BASIX_DEFN Basix::basix INTERFACE_COMPILE_DEFINITIONS)
+# if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
+#   find_package(xsimd REQUIRED)
+# endif()
 
 # include(FetchContent)
 # FetchContent_Declare(
