Add option to enable SIMD with xtensor (#202)
* Cmake update

* Make CI build verbose

* Update visibility

* CMake change

* CMake change

* Add option to enable xtensor with SIMD

* Undo CI change

* CMake change

* Change compiler

* Attempt workaround

* Work around

* Cmake fix

* Remove a CMake REQUIRED

* Add quotes

* Manipulate xtensor-blas flags

* Update Python CMake

* Add optimisation option

* Add xtensor::optimize CMake option

* Branch update

* Update  build

* Change order

* SIMD update

* Update comments

* Change order

* Test

* Make xtensor-blas private

* Refactoring

* Remove stray bracket

* Minor CMake update

* Make some CMake quiet

* Update CI branch

Co-authored-by: Igor Baratta <igorbaratta@gmail.com>

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,8 +22,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install pybind11
-        run:
-          pip install pybind11
+        run: pip install pybind11
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
@@ -39,12 +38,12 @@ jobs:
         run: |
           pip install flake8
           flake8 --statistics test/
-      - name: Install basix C++
+      - name: Install Basix C++
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S .
           cmake --build build-dir
           sudo cmake --install build-dir
-      - name: Build basix Python
+      - name: Build Basix Python
         run: |
           cd python
           pip install .
