--- a/BasixConfig.cmake.in
+++ b/BasixConfig.cmake.in
@@ -1,5 +1,11 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+
+# xtensor
+find_dependency(xtl)
+find_dependency(xtensor)
+
 if(NOT TARGET @PROJECT_NAME@)
   include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 endif()
