A Numba dof transformations function (#197)
* Add numba function for dof transformations

* install numba to run test

* doc

* flake

* scipy needed by numba

* one function for each cell type

* copy docstring

* fix test

* dont pass in cell type

* Numba optimizations

* minor fix in consistency

* Update docs

* fix flake8

Co-authored-by: Jørgen Dokken <jsd55@cam.ac.uk>
Co-authored-by: IgorBaratta <igorbaratta@gmail.com>

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -54,7 +54,7 @@ jobs:
           cd python/doc && make html
       - name: Run units tests
         run: |
-          pip install pytest pytest-xdist numpy sympy
+          pip install pytest pytest-xdist numpy sympy numba scipy
           pytest -v -n auto --durations 20 test/
       - name: Checkout FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && github.ref == 'refs/heads/main' && runner.os == 'Linux' }}
