--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 # Set the version
-project(Basix VERSION "0.0.1" LANGUAGES CXX)
+project(Basix VERSION "0.1.0" LANGUAGES CXX)
 include(GNUInstallDirs)
 
 include(FeatureSummary)
@@ -81,6 +81,8 @@ feature_summary(WHAT ALL)
 
 add_library(basix)
 
+configure_file(${CMAKE_SOURCE_DIR}/cpp/basix/version.h.in ${CMAKE_SOURCE_DIR}/cpp/basix/version.h)
+
 set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/cell.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/dof-transformations.h
@@ -102,8 +104,9 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/regge.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/crouzeix-raviart.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/bubble.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/serendipity.h)
-
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/serendipity.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/version.h)
+  
 target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/cell.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/cpp/basix/dof-transformations.cpp
