--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,7 +4,15 @@
 
 name: Basix CI
 
-on: [push, pull_request]
+on:
+  - push
+      branches:
+        - "**"
+      tags:
+        - "*.*.*.**"
+        - "*.*.*"
+
+  - pull_request
 
 jobs:
   build:
@@ -27,10 +35,6 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
-      - name: Build C++ documentation (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          cd cpp/doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install ninja
@@ -47,34 +51,44 @@ jobs:
         run: |
           cd python
           pip install .
+      - name: Run units tests
+        run: |
+          pip install pytest pytest-xdist numpy sympy numba scipy
+          pytest -v -n auto --durations 20 test/
       - name: Build Python documentation (Linux)
         if: runner.os == 'Linux'
         run: |
           pip install sphinx sphinx_rtd_theme
           cd python/doc && make html
-      - name: Run units tests
+      - name: Build C++ documentation (Linux)
+        if: runner.os == 'Linux'
         run: |
-          pip install pytest pytest-xdist numpy sympy numba scipy
-          pytest -v -n auto --durations 20 test/
+          cd cpp/doc && doxygen
       - name: Checkout FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && github.ref == 'refs/heads/main' && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
         with:
           repository: "FEniCS/docs"
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
-      - name: Push documentation to repository FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && github.ref == 'refs/heads/main' && runner.os == 'Linux' }}
+      - name: Set version name
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
+        run: echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Copy documentation into repository
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
         run: |
           cd docs
+          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/cpp
+          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/python
+          mkdir -p basix/${{ env.VERSION_NAME }}/cpp
+          mkdir -p basix/${{ env.VERSION_NAME }}/python
+          cp -r ../cpp/doc/html/* basix/${{ env.VERSION_NAME }}/cpp
+          cp -r ../python/doc/build/html/* basix/${{ env.VERSION_NAME }}/python
+      - name: Commit and push documentation to FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
+        run: |
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
-          git rm -r basix/main/cpp
-          git rm -r --ignore-unmatch basix/main/python
-          mkdir -p basix/main/cpp
-          mkdir -p basix/main/python
-          cp -r ../cpp/doc/html/* basix/main/cpp
-          cp -r ../python/doc/build/html/* basix/main/python
           git add --all
-          git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
+          git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }} ({{ github.ref }})"
           git push
