--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -93,5 +93,5 @@ jobs:
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
           git add --all
-          git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }} ({{ github.ref }})"
+          git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
           git push
