--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -56,28 +56,29 @@ jobs:
         run: |
           pip install pytest pytest-xdist numpy sympy numba scipy
           pytest -v -n auto --durations 20 test/
-      - name: Build Python documentation (Linux)
+      - name: Build Python documentation
         if: runner.os == 'Linux'
         run: |
           pip install sphinx sphinx_rtd_theme
           cd python/doc && make html
-      - name: Build C++ documentation (Linux)
+      - name: Build C++ documentation
         if: runner.os == 'Linux'
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd cpp/doc && doxygen
       - name: Checkout FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
         with:
           repository: "FEniCS/docs"
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
       - name: Set version name
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
-        run: echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        run: |
+          echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Copy documentation into repository
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           cd docs
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/cpp
@@ -87,7 +88,7 @@ jobs:
           cp -r ../cpp/doc/html/* basix/${{ env.VERSION_NAME }}/cpp
           cp -r ../python/doc/build/html/* basix/${{ env.VERSION_NAME }}/python
       - name: Commit and push documentation to FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/tags/*' ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           cd docs
           git config --global user.email "fenics@github.com"
