--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -39,10 +39,12 @@ jobs:
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install ninja
+
       - name: Lint with flake8
         run: |
           pip install flake8
           flake8 --statistics test/
+
       - name: Install Basix C++
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S .
@@ -52,10 +54,12 @@ jobs:
         run: |
           cd python
           pip install .
+
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy numba scipy
           pytest -v -n auto --durations 20 test/
+
       - name: Build Python documentation
         if: runner.os == 'Linux'
         run: |
@@ -66,6 +70,24 @@ jobs:
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd cpp/doc && doxygen
+
+      - name: Upload C++ documentation artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: doc-cpp
+          path: |
+            cpp/doc/html/
+          retention-days: 2
+          if-no-files-found: error
+      - name: Upload Python documentation artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: doc-python
+          path: |
+            python/doc/build/html/
+          retention-days: 2
+          if-no-files-found: error
+
       - name: Checkout FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
