--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -65,24 +65,16 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           pip install markdown
-          cd doc && python make_html.py
-      - name: Build Python documentation
-        if: runner.os == 'Linux'
-        run: |
           pip install sphinx sphinx_rtd_theme
-          cd python/doc && make html
-      - name: Build C++ documentation
-        if: runner.os == 'Linux'
-        run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-          cd cpp/doc && doxygen
+          cd doc && python make_html.py
 
       - name: Upload C++ documentation artifact
         uses: actions/upload-artifact@v2
         with:
           name: doc-cpp
           path: |
-            cpp/doc/html/
+            doc/html/cpp
           retention-days: 2
           if-no-files-found: error
       - name: Upload Python documentation artifact
@@ -90,7 +82,7 @@ jobs:
         with:
           name: doc-python
           path: |
-            python/doc/build/html/
+            doc/html/python
           retention-days: 2
           if-no-files-found: error
 
@@ -110,14 +102,8 @@ jobs:
         run: |
           cd docs
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
-          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/cpp
-          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/python
           mkdir -p basix/${{ env.VERSION_NAME }}
-          mkdir -p basix/${{ env.VERSION_NAME }}/cpp
-          mkdir -p basix/${{ env.VERSION_NAME }}/python
           cp -r ../doc/html/* basix/${{ env.VERSION_NAME }}
-          cp -r ../cpp/doc/html/* basix/${{ env.VERSION_NAME }}/cpp
-          cp -r ../python/doc/build/html/* basix/${{ env.VERSION_NAME }}/python
       - name: Commit and push documentation to FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
