--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
 *.pyc
 *~
 *.so
-cpp/doc/html/*
-cpp/doc/latex/*
+
 cpp/Makefile
 cpp/CMakeCache.txt
 cpp/CMakeFiles/*
 cpp/cmake_install.cmake
 cpp/basix/version.h
 
-python/doc/build/*
-python/doc/source/generated/*
+doc/python/build/*
+doc/python/source/generated/*
 python/testing_build/
+doc/cpp/html/*
+doc/cpp/latex/*
+doc/html/*
+doc/_temp
+
+doc/python/source/_templates/layout.html
+doc/cpp/header.html
 
 build*/
 
