--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -1,21 +1,10 @@
 name: Intel compilers
 
-# on:
-#   schedule:
-#     # '*' is a special character in YAML, so string must be quoted
-#     - cron: "0 2 * * TUE"
-#   workflow_dispatch: ~
-
 on:
-  push:
-    branches:
-      - "**"
-    tags:
-      - "*.*.*.*"
-      - "*.*.*"
-  pull_request:
-    branches:
-      - main
+  schedule:
+    # '*' is a special character in YAML, so string must be quoted
+    - cron: "0 2 * * TUE"
+  workflow_dispatch: ~
 
 jobs:
   build:
